# cloud-services-schema

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  renovate.json
.github/workflows/: ci.yaml
examples/: sample_server.rs
src/: auth.rs  devices.rs  error.rs  lib.rs  user_server.rs  user_side.rs  users.rs  utils.rs
src/cloud_p2p/: authorize_new_device_in_sync_group.rs  get_thumbnail.rs  mod.rs  notify_new_sync_messages.rs
src/devices/: delete.rs  get.rs  hello.rs  list.rs  mod.rs  register.rs  update.rs
src/libraries/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/locations/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/macros/: client.rs  communication.rs  mod.rs  requests.rs  responses.rs
src/sync/: groups.rs  messages.rs  mod.rs
src/sync/groups/: create.rs  delete.rs  get.rs  leave.rs  list.rs  mod.rs  remove_device.rs  reply_join_request.rs  request_join.rs
src/sync/messages/: delete_older.rs  get_latest_time.rs  mod.rs  pull.rs  push.rs
src/sync/space_files/: delete.rs  list.rs  mod.rs  pull.rs  push.rs  update.rs  update_metadata.rs
src/user_server/: authorize_new_device_in_sync_group.rs  mod.rs  p2p_authorize_new_device_in_sync_group.rs  reply_sync_group_join.rs
src/utils/: router.rs
src/utils/middleware/: auth.rs  error.rs
