[package]
name = "sd-cloud-schema"
version = "0.1.0"
authors = ["Ericson Soares <ericson@spacedrive.com>"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/spacedriveapp/cloud-services-schema"
rust-version = "1.79.0"
resolver = "2"

[dependencies]
argon2 = "0.5.3"
opaque-ke = { version = "3.0.0-pre.4", features = ["argon2"] }
paste = "1.0.15"
quic-rpc = { version = "0.11.0", features = ["macros"] }
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
