[package]
name = "sd-cloud-schema"
version = "0.1.0"
authors = ["Ericson Soares <ericson@spacedrive.com>"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/spacedriveapp/cloud-services-schema"
rust-version = "1.79.0"
resolver = "2"

[lints.rust]
# Warns
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_allocation = "warn"
deprecated = "warn"
# Forbids
deprecated_in_future = "forbid"

[lints.clippy]
# Warns
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
unnecessary_cast = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
deprecated_cfg_attr = "warn"
separated_literal_suffix = "warn"
# Allows
missing_errors_doc = "allow"
module_name_repetitions = "allow"


[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
futures-lite = { version = "2.3.0", default-features = false, features = ["alloc"] }
iroh-base = { version = "0.20.0", features = ["key"] }
opaque-ke = { version = "3.0.0-pre.4", features = ["argon2"] }
paste = "1.0.15"
quic-rpc = { version = "0.11.0", features = ["macros"] }
serde = { version = "1.0.204", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde"] }
zeroize = { version = "1.8.1", features = ["serde", "derive"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
